# MUSS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: council.rs  guide.rs  main.rs  quiz.rs
src/heresy/: ai.rs  detector.rs  mod.rs  translator.rs
src/religions/: cpp.rs  javascript.rs  mod.rs  python.rs  rust.rs
static/: style.css
templates/: 404.html.tera  base.html.tera  council.html.tera  exhibit.html.tera  heresy.html.tera  index.html.tera  pilgrimage.html.tera  pilgrimage_detail.html.tera  quiz.html.tera  relics.html.tera  wars.html.tera
